benchmarks/router/kubernetes/valkey_sweep/stack-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey-sweep-router-primary
  namespace: bis-rl-3
  labels:
    app.kubernetes.io/part-of: valkey-router-sweep
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
  - name: valkey
    port: 6379
    targetPort: valkey
  selector:
    app.kubernetes.io/part-of: valkey-router-sweep
    app.kubernetes.io/name: valkey-sweep-router-primary
---
apiVersion: v1
kind: Service
metadata:
  name: valkey-sweep-router-replica
  namespace: bis-rl-3
  labels:
    app.kubernetes.io/part-of: valkey-router-sweep
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
  - name: valkey
    port: 6379
    targetPort: valkey
  selector:
    app.kubernetes.io/part-of: valkey-router-sweep
    app.kubernetes.io/name: valkey-sweep-router-replica
---
apiVersion: v1
kind: Service
metadata:
  name: valkey-sweep-tokenizer-primary
  namespace: bis-rl-3
  labels:
    app.kubernetes.io/part-of: valkey-router-sweep
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
  - name: valkey
    port: 6379
    targetPort: valkey
  selector:
    app.kubernetes.io/part-of: valkey-router-sweep
    app.kubernetes.io/name: valkey-sweep-tokenizer-primary
---
apiVersion: v1
kind: Service
metadata:
  name: valkey-sweep-tokenizer-replica
  namespace: bis-rl-3
  labels:
    app.kubernetes.io/part-of: valkey-router-sweep
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
  - name: valkey
    port: 6379
    targetPort: valkey
  selector:
    app.kubernetes.io/part-of: valkey-router-sweep
    app.kubernetes.io/name: valkey-sweep-tokenizer-replica
---
apiVersion: v1
kind: Service
metadata:
  name: valkey-sweep-sentinel
  namespace: bis-rl-3
  labels:
    app.kubernetes.io/part-of: valkey-router-sweep
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
  - name: sentinel
    port: 26379
    targetPort: sentinel
  selector:
    app.kubernetes.io/part-of: valkey-router-sweep
    app.kubernetes.io/name: valkey-sweep-sentinel
---
apiVersion: v1
kind: Service
metadata:
  name: valkey-sweep-frontend
  namespace: bis-rl-3
  labels:
    app.kubernetes.io/part-of: valkey-router-sweep
spec:
  clusterIP: None
  ports:
  - name: http
    port: 8000
    targetPort: http
  selector:
    app.kubernetes.io/part-of: valkey-router-sweep
    app.kubernetes.io/name: valkey-sweep-frontend
